--- a/app/static/styles/header.css
+++ b/app/static/styles/header.css
@@ -44,11 +44,13 @@ header {
 }
 
 #menu-btn {
-  top: -1.5em;
+  height: 2em;
+  top: 0;
   left: 0;
 }
 
 .logout-btn {
+  height: 2em;
   right: 0;
 }
 
