--- a/app/static/styles/template.css
+++ b/app/static/styles/template.css
@@ -272,13 +272,20 @@ table.links td.actions {
   grid-column: 1/-1;
 }
 
-.card > img {
+.card-img {
+  max-width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card img {
   margin: auto;
   width: 100%;
   padding: 10px;
 }
 
-.card > img[src$='.png'] {
+.card img[src$='.png'] {
   padding: 1em;
 }
 
